# PdfItDown

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  jakefile.toml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  check-docs.yaml  ci-node.yml  ci-python.yml  ci-wasm.yml  ci.yml  lint.yaml  release.yml  release_mcp.yml  test.yml  test_on_push.yaml  typecheck.yaml
cookbooks/: base_usage.ipynb  custom_usage.ipynb  server.ipynb
cookbooks/data/: pdfitdown_cli_ref.md  strategic_plan.docx
crates/pdfitdown/: Cargo.toml  README.md
crates/pdfitdown-python/: Cargo.toml  README.md  pyproject.toml
crates/pdfitdown-python/src/: lib.rs
crates/pdfitdown-ts/: .gitattributes  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/pdfitdown-ts/__test__/: index.spec.ts
crates/pdfitdown-ts/data/: markup1.html
crates/pdfitdown-ts/src/: lib.rs
crates/pdfitdown-wasm/: Cargo.toml
crates/pdfitdown-wasm/src/: lib.rs
crates/pdfitdown/src/: lib.rs  main.rs  types.rs
crates/pdfitdown/src/img/: mod.rs
crates/pdfitdown/src/markup/: mod.rs
crates/pdfitdown/src/office/: mod.rs
crates/pdfitdown/src/text/: mod.rs
pdfitdown_env/: pyvenv.cfg
pdfitdown_env/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py  runxlrd.py  vba_extract.py
scripts/edge-compat/: wasm-test.mjs
src/pdfitdown/: _pdfconversion.py  pdfconversion.py  pdfitdown_cli.py
src/pdfitdown/cli/: app.py
src/pdfitdown/conversion/: converter.py  errors.py  models.py
src/pdfitdown/pdfconversion/: _default_callback.py  converter.py  models.py
src/pdfitdown/server/: __init__.py  serve.py
src/pdfitdown/web/: __init__.py  app.py  main.py  manager.py  models.py  pdf_processor.py
src/pdfitdown/web/static/: index.html
src/pdfitdown/web/static/css/: style.css
src/pdfitdown/web/static/js/: app.js
tests/: pdfconversion.py  test_cli.py  test_converter.py  test_custom_conversion_callback.py  test_markitdown.py  test_models.py  test_server.py
tests/data/: test3.json  test9.csv
tests/no-extras/: test_cli.py  test_converter.py  test_custom_conversion_callback.py  test_models.py
