[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pdfitdown"
version = "2.0.0-beta"
authors = [
  {name = "Clelia (Astra) Bertelli", email = "astraberte9@gmail.com"}
]
description = "PdfItDown - Convert Everything to PDF"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  'llama-index-readers-markitdown',
  'markdown-pdf',
  'img2pdf',
  'pillow',
  'gradio',
  'termcolor'
]

[project.urls]
Homepage = "https://github.com/AstraBert/PdfItDown"
Issues = "https://github.com/AstraBert/PdfItDown/issues"

[project.scripts]
pdfitdown = "pdfitdown.pdfitdown_cli:main"
pdfitdown_ui = "pdfitdown.pdfitdown_ui:main"

[tool.uv.build-backend]
module-name = "pdfitdown"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.11.8",
    "ty>=0.0.1a27",
]
