[package]
name = "pdfitdown-python"
version = "4.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AstraBert/PdfItDown"
description = "PdfItDown: Convert anything to PDF. Python bindings for the Rust library."
keywords = ["pdf", "conversion", "office", "images", "markup"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pdfitdown"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
pdfitdown = { path = "../pdfitdown", version = "4.0.0" }
clap = { version = "4.6.1", features = ["derive"] }
