
[package]
authors = ["Clelia Astra Bertelli <astraberte9@gmail.com>"]
edition = "2021"
name    = "pdfitdown-ts"
version = "4.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
pdfitdown   = { path = "../pdfitdown", version = "4.0.0" }

[build-dependencies]
napi-build = "2"
