[package]
name = "pdfitdown"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
html-to-markdown-rs = "3.8.0"
image = "0.25.10"
infer = { version = "0.19.0", default-features = false }
markdown2pdf = "1.5.0"
office2pdf = { version = "0.6.0", features = ["wasm", "wasm-bindgen"] }
rayon = { version = "1.12.0", optional = true }
regex = "1.12.4"

[features]
rayon = ["dep:rayon"]
