[package]
name = "pdfitdown"
version = "4.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
image = "0.25.10"
infer = { version = "0.19.0", default-features = false }

office2pdf = { version = "0.6.0", features = ["wasm", "wasm-bindgen"] }
rayon = { version = "1.12.0", optional = true }
regex = "1.12.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
markdown = "1.0.0"
printpdf = {version = "0.9.1", features = ["web-sys", "wasm-bindgen-futures", "html", ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
markdown2pdf = "1.5.0"
html-to-markdown-rs = "3.8.0"

[features]
rayon = ["dep:rayon"]

[dev-dependencies]
tempfile = "3.27.0"
zip = "2"
