[package]
name = "pdfitdown"
version = "4.0.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/AstraBert/PdfItDown"
description = "PdfItDown: Convert anything to PDF."
keywords = ["pdf", "conversion", "office", "images", "markup"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }

flate2 = { version = "1.1.9", optional = true }
image  = { version = "0.25.10", optional = true }

infer = { version = "0.19.0", default-features = false, optional = true }

office2pdf = { version = "0.6.0", features = ["wasm", "wasm-bindgen"], optional = true }

rayon = { version = "1.12.0", optional = true }

regex = "1.12.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
markdown = { version = "1.0.0", optional = true }
printpdf = { version = "0.9.1", features = ["web-sys", "wasm-bindgen-futures", "html"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
markdown2pdf        = { version = "1.5.0", optional = true }
html-to-markdown-rs = { version = "3.8.0", optional = true }

[features]
default = ["cli", "image", "office", "markup"]

cli    = ["dep:clap"]
image  = ["dep:flate2", "dep:image", "dep:infer"]
office = ["dep:office2pdf", "dep:infer"]
rayon  = ["dep:rayon"]

markup = ["dep:markdown", "dep:printpdf", "dep:markdown2pdf", "dep:html-to-markdown-rs"]

[dev-dependencies]
tempfile = "3.27.0"
zip = "2"
